controller/test/e2e/features/agentgateway/transformation/testdata/gateway-attached-transform.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
  namespace: agentgateway-base
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "example-gateway-attached-transform.com"
  rules:
    - backendRefs:
        - name: backend
          port: 80
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: example-agw-policy-for-gateway-attached-transform
  namespace: agentgateway-base
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
  traffic:
    transformation:
      request:
        set:
          - name: request-gateway
            value: "level_{%- if headers != \"\" -%}{{headers.X-Incoming-Stuff.0}}{% else %}unknown{% endif %}"
      response:
        set:
          - name: response-gateway
            value: "'goodbye'"
