controller/test/e2e/features/agentgateway/transformation/testdata/transform-for-body.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route-for-body
  namespace: agentgateway-base
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "example-route-for-body.com"
  rules:
    - backendRefs:
        - name: backend
          port: 80
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: example-agw-policy-for-body
  namespace: agentgateway-base
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: example-route-for-body
  traffic:
    transformation:
      request:
        set:
          - name: "x-transformed-incoming"
            value: "'mykey' in json(request.body) && 'myinnerkey' in json(request.body).mykey ? 'level_' + string(json(request.body).mykey.myinnerkey) : 'level_unknown'"
        body: "request.body"
      response:
        set:
          - name: "x-how-great"
            value:  "'x-incoming-stuff' in request.headers ? 'level_' + request.headers['x-incoming-stuff'] : 'level_unknown'"
          - name: "from-incoming"
            value: "'mykey' in json(request.body) && 'myinnerkey' in json(request.body).mykey ? 'key_level_' + string(json(request.body).mykey.myinnerkey) : 'key_unknown'"
        body: "request.headers"
